objects/Vosf_Survey_Invitation__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY() + $Setup.Vosf_Survey_Setting__c.Due_Date_Period__c</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Answered_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Answered Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <label>Survey Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Vosf_Survey__c</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Invitation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participant__c</columns>
        <columns>Status__c</columns>
        <columns>Survey__c</columns>
        <columns>Last_Answered_Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{YY}{MM}{00000}</displayFormat>
        <label>Survey Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Invitations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>